Updated custom authenticator so that it can take a local *path* rather than a URL (e.g. lib/some-custom-authenticator.jar rather than file:///home/adamkewley/lib/some-custom-authenticator.jar)